--- a/Decision Trees, Time Series Analysis/Decision Trees, Time Series Analysis.ipynb
+++ b/Decision Trees, Time Series Analysis/Decision Trees, Time Series Analysis.ipynb
@@ -453,6 +453,7 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "lab = "churndep"\n",
     "%matplotlib inline\n",
     "\n",
     "def testTreesAccuracy(X_train, y_train, X_test, y_test, split, leaf, auc):\n",
